forEnersys/DavePkg/objects/SAP_Reference__c.object
<CustomObject>
    <description>This object is for maintaining the information about delivery terms, payment terms, Incoterms, and other tables of reference from Baan or SAP.</description>
    <fields>
        <fullName>Code_Type__c</fullName>
        <inlineHelpText>Enter the full name of the code type and then follow it with a - and a 2 letter code for the code type</inlineHelpText>
        <label>Code Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Delivery_Terms_DT</fullName>
                    <label>Delivery Terms - DT</label>
                </value>
                <value>
                    <fullName>Payment_Terms_PT</fullName>
                    <label>Payment Terms - PT</label>
                </value>
                <value>
                    <fullName>Warehouse Codes - WC</fullName>
                </value>
                <value>
                    <fullName>Order Type - OT</fullName>
                </value>
                <value>
                    <fullName>Order Series - OS</fullName>
                </value>
                <value>
                    <fullName>Sales Office - SO</fullName>
                </value>
                <value>
                    <fullName>Customer Group - CG</fullName>
                </value>
                <value>
                    <fullName>Terms of Payment - TP</fullName>
                </value>
                <value>
                    <fullName>Incoterm - IC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <description>Company #</description>
        <label>Company #</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Company_Number</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>If it begins with B, it is from Baan. If it begins with S, it is from SAP. The second 2 characters describe what type of code it is.</inlineHelpText>
        <label>Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Missing_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this is checked, the record was not previously created and it will need to be addressed in the system of record.</inlineHelpText>
        <label>Missing Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <label>System</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Baan</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SAP Reference</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Code__c</columns>
        <columns>NAME</columns>
        <columns>Code_Type__c</columns>
        <columns>System__c</columns>
        <columns>Company__c</columns>
        <columns>Key__c</columns>
        <columns>Missing_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Delivery_Terms</fullName>
        <columns>Code__c</columns>
        <columns>NAME</columns>
        <columns>Code_Type__c</columns>
        <columns>Key__c</columns>
        <columns>System__c</columns>
        <columns>Missing_Value__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Code_Type__c</field>
            <operation>equals</operation>
            <value>Delivery_Terms_DT</value>
        </filters>
        <label>Delivery Terms</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EMEA_Customer_Group</fullName>
        <columns>Code__c</columns>
        <columns>NAME</columns>
        <columns>Code_Type__c</columns>
        <columns>Key__c</columns>
        <columns>System__c</columns>
        <columns>Missing_Value__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Code_Type__c</field>
            <operation>equals</operation>
            <value>Customer Group - CG</value>
        </filters>
        <label>EMEA Customer Group</label>
        <language>en_US</language>
        <sharedTo>
            <group>Admins</group>
            <group>EMEA_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_Incoterm</fullName>
        <columns>Code__c</columns>
        <columns>NAME</columns>
        <columns>Code_Type__c</columns>
        <columns>Key__c</columns>
        <columns>System__c</columns>
        <columns>Missing_Value__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Code_Type__c</field>
            <operation>equals</operation>
            <value>Incoterm - IC</value>
        </filters>
        <label>EMEA Incoterm</label>
        <language>en_US</language>
        <sharedTo>
            <group>Admins</group>
            <group>EMEA_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_Sales_Office</fullName>
        <columns>Code__c</columns>
        <columns>NAME</columns>
        <columns>Code_Type__c</columns>
        <columns>Key__c</columns>
        <columns>System__c</columns>
        <columns>Missing_Value__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Code_Type__c</field>
            <operation>equals</operation>
            <value>Sales Office - SO</value>
        </filters>
        <label>EMEA Sales Office</label>
        <language>en_US</language>
        <sharedTo>
            <group>Admins</group>
            <group>EMEA_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_Shipping_Condition</fullName>
        <columns>Code__c</columns>
        <columns>NAME</columns>
        <columns>Code_Type__c</columns>
        <columns>Key__c</columns>
        <columns>System__c</columns>
        <columns>Missing_Value__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Code_Type__c</field>
            <operation>equals</operation>
            <value>Shipping Condition - SC</value>
        </filters>
        <label>EMEA Shipping Condition</label>
        <language>en_US</language>
        <sharedTo>
            <group>Admins</group>
            <group>EMEA_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_Terms_of_Payment</fullName>
        <columns>Code__c</columns>
        <columns>NAME</columns>
        <columns>Code_Type__c</columns>
        <columns>Key__c</columns>
        <columns>System__c</columns>
        <columns>Missing_Value__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Code_Type__c</field>
            <operation>equals</operation>
            <value>Terms of Payment - TP</value>
        </filters>
        <label>EMEA Terms of Payment</label>
        <language>en_US</language>
        <sharedTo>
            <group>Admins</group>
            <group>EMEA_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Missing</fullName>
        <columns>Code__c</columns>
        <columns>NAME</columns>
        <columns>Code_Type__c</columns>
        <columns>System__c</columns>
        <columns>Company__c</columns>
        <columns>Key__c</columns>
        <columns>Missing_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Missing_Value__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Missing</label>
    </listViews>
    <listViews>
        <fullName>Order_Types</fullName>
        <columns>Code__c</columns>
        <columns>NAME</columns>
        <columns>Code_Type__c</columns>
        <columns>Key__c</columns>
        <columns>System__c</columns>
        <columns>Missing_Value__c</columns>
        <columns>Company__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Code_Type__c</field>
            <operation>equals</operation>
            <value>Order Type - OT</value>
        </filters>
        <label>Order Types</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Payment_Terms</fullName>
        <columns>Code__c</columns>
        <columns>Key__c</columns>
        <columns>NAME</columns>
        <columns>Code_Type__c</columns>
        <columns>System__c</columns>
        <columns>Missing_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Code_Type__c</field>
            <operation>equals</operation>
            <value>Payment_Terms_PT,Payment Terms - PT</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SAP_Reference__c.Enersys_SAP_Reference</value>
        </filters>
        <label>Payment Terms</label>
    </listViews>
    <listViews>
        <fullName>Problem_Terms</fullName>
        <columns>Code__c</columns>
        <columns>Key__c</columns>
        <columns>NAME</columns>
        <columns>Code_Type__c</columns>
        <columns>System__c</columns>
        <columns>Missing_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Code_Type__c</field>
            <operation>notEqual</operation>
            <value>,Delivery_Terms_DT,Delivery Terms - DT,Payment_Terms_PT,Payment Terms - PT,Warehouse Codes - WC,Order Type - OT</value>
        </filters>
        <label>Problem Terms</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Warehouse_Codes</fullName>
        <columns>Code__c</columns>
        <columns>NAME</columns>
        <columns>Code_Type__c</columns>
        <columns>Key__c</columns>
        <columns>System__c</columns>
        <columns>Missing_Value__c</columns>
        <columns>Company__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Code_Type__c</field>
            <operation>equals</operation>
            <value>Warehouse Codes - WC</value>
        </filters>
        <label>Warehouse Codes</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SAP References</pluralLabel>
    <recordTypes>
        <fullName>Enersys_SAP_Reference</fullName>
        <active>true</active>
        <description>Record type for Delivery Terms, Payment Terms</description>
        <label>Enersys SAP Reference</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>